source/sass/components/_markdown.scss
.markdown {
    color: #ececec;

    h1 {
        padding-bottom: 16px;
        border-bottom: 1px solid #ecececec;
    }

    h2 {
        padding-bottom: 10px;
        border-bottom: 1px solid #cececece;
    }

    a {
        color: #faa21b;
        text-decoration: none;

        &:visited {
            color: #faa21b;
        }

        &:hover {
            text-decoration: underline;
        }
    }

    hr {
        border-style: solid;
        border-color: #aeaeae;
    }

    blockquote {
        margin: 0px;
        padding: 1px 20px;

        background: rgba(0,0,0, 0.25);
        border-left: 5px solid #faa21b;
        border-radius: 1px;
    }

    code {
        font-family: 'JetBrains Mono', monospace;
    }

    p code {
        padding: 0px 1px;
        background: rgba(0,0,0, 0.25);
        border: 1px solid rgba(0,0,0, 0.25);
        border-radius: 2px;
    }

    pre {
        display: block;
        padding: 1.25rem 1.5rem;
        background-color: rgba(0,0,0, 0.4);
        border-radius: 5px;

        overflow-x: auto;
    }
    

    table {
        background: none;

        th {
            padding: 12px 30px;
            background-color: #000000;
            border-bottom: 1px solid #888888;
        }

        td {
            padding: 15px 30px;
        }

        tr {
            background-color: #111111;
        }

        tr:nth-child(2) {
            background-color: #080808;
        }
    }
}

